alignment fix

--- a/module9-solution/styles/styles.css
+++ b/module9-solution/styles/styles.css
@@ -1,3 +1,6 @@
+.center_titles {
+  text-align: center;
+}
 h1 {
   margin-bottom: 30px;
 }
